@@ -9,6 +9,8 @@ WISH: OnTheSpot editing, or maybe switch to miiiiiiif
 WISH: just for fun, do shade and tint with XRender.
 WISH: support tex fonts
 
+	- added sections for DISTRIBUTION MAINTAINERS and about
+          SETUID/SETGID operation tot he FAQ.
 	- selection, selection-popup and option-popup extensions
           enabled by default.
         - perl: much increased functionality, better overlays, popup support
